updated css to fix the alignment issue

--- a/src/pages/landingPages/donate/donate.scss
+++ b/src/pages/landingPages/donate/donate.scss
@@ -23,6 +23,10 @@ p {
     font-size: 1.5rem;
 }
 
+section {
+    height: 100%;
+}
+
 .section-background {
     background-image: url("./assets/spacelab-donate-background.png");
     background-size: cover;
